--- a/frontend/budgets.html
+++ b/frontend/budgets.html
@@ -37,6 +37,7 @@
                 <button id="ai-run" type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded self-end"><i class="fas fa-robot inline w-4 h-4 mr-1"></i>Generate Budgets</button>
             </form>
             <div id="ai-result" class="mt-4"></div>
+            <pre id="ai-debug" class="mt-4 text-xs bg-gray-100 p-2 overflow-x-auto hidden"></pre>
 
         </section>
         <section>
@@ -157,6 +158,7 @@ document.getElementById('ai-form').addEventListener('submit',async e=>{
     const goal=document.getElementById('goal').value;
 
     const resultEl=document.getElementById('ai-result');
+    const debugEl=document.getElementById('ai-debug');
     const btn=document.getElementById('ai-run');
     btn.disabled=true;
     btn.classList.add('opacity-50','cursor-not-allowed');
@@ -179,9 +181,16 @@ document.getElementById('ai-form').addEventListener('submit',async e=>{
             resultEl.textContent=data.error||'AI budgeting failed.';
             showMessage('AI budgeting failed','error');
         }
+        if(data.debug){
+            debugEl.textContent=JSON.stringify(data.debug,null,2);
+            debugEl.classList.remove('hidden');
+        }else{
+            debugEl.classList.add('hidden');
+        }
     }catch(err){
         resultEl.textContent='Request failed';
         showMessage('AI budgeting failed','error');
+        debugEl.classList.add('hidden');
     }finally{
         btn.disabled=false;
         btn.classList.remove('opacity-50','cursor-not-allowed');
