--- a/frontend/ai_feedback.html
+++ b/frontend/ai_feedback.html
@@ -21,6 +21,7 @@
                 <i class="fas fa-comments-dollar inline w-4 h-4 mr-1"></i>Generate Feedback
             </button>
             <div id="result" class="mt-4 whitespace-pre-wrap"></div>
+            <pre id="ai-debug" class="mt-4 text-xs bg-gray-100 p-2 overflow-x-auto hidden"></pre>
         </section>
     </main>
 </div>
@@ -30,6 +31,7 @@
 <script>
 document.getElementById('run').addEventListener('click', async () => {
     const result = document.getElementById('result');
+    const debugEl = document.getElementById('ai-debug');
     const btn = document.getElementById('run');
     btn.disabled = true;
     btn.classList.add('opacity-50', 'cursor-not-allowed');
@@ -44,9 +46,16 @@ document.getElementById('run').addEventListener('click', async () => {
             result.textContent = data.feedback;
             showMessage('AI feedback ready');
         }
+        if (data.debug) {
+            debugEl.textContent = JSON.stringify(data.debug, null, 2);
+            debugEl.classList.remove('hidden');
+        } else {
+            debugEl.classList.add('hidden');
+        }
     } catch (e) {
         result.textContent = 'Request failed';
         showMessage('AI feedback failed', 'error');
+        debugEl.classList.add('hidden');
     } finally {
         btn.disabled = false;
         btn.classList.remove('opacity-50', 'cursor-not-allowed');
