--- a/frontend/ai_tags.html
+++ b/frontend/ai_tags.html
@@ -30,7 +30,15 @@
             <p class="mb-4">Use AI to suggest tags and categories for untagged transactions.</p>
             <button id="run" class="bg-green-600 text-white px-4 py-2 rounded"><i class="fas fa-robot inline w-4 h-4 mr-1"></i>Run AI Tagging</button>
             <div id="result" class="mt-4"></div>
-            <pre id="debug" class="mt-4 text-xs bg-gray-100 p-2 overflow-x-auto hidden"></pre>
+            <div id="debug" class="mt-4 hidden">
+                <div class="bg-white p-4 rounded shadow border border-gray-400">
+                    <h3 class="font-semibold text-gray-700 mb-2">AI Debug</h3>
+                    <p class="text-sm font-semibold">Request</p>
+                    <pre id="debug-request" class="text-xs bg-gray-100 p-2 mb-2 overflow-x-auto"></pre>
+                    <p class="text-sm font-semibold">Response</p>
+                    <pre id="debug-response" class="text-xs bg-gray-100 p-2 overflow-x-auto"></pre>
+                </div>
+            </div>
         </section>
     </main>
 </div>
@@ -56,7 +64,9 @@ document.getElementById('save-token').addEventListener('click', async () => {
 
 document.getElementById('run').addEventListener('click', async () => {
     const resultEl = document.getElementById('result');
-    const debugEl = document.getElementById('debug');
+    const debugContainer = document.getElementById('debug');
+    const debugReq = document.getElementById('debug-request');
+    const debugRes = document.getElementById('debug-response');
     const btn = document.getElementById('run');
     btn.disabled = true;
     btn.classList.add('opacity-50', 'cursor-not-allowed');
@@ -74,15 +84,17 @@ document.getElementById('run').addEventListener('click', async () => {
             showMessage('AI tagging complete');
         }
         if (data.debug) {
-            debugEl.textContent = JSON.stringify(data.debug, null, 2);
-            debugEl.classList.remove('hidden');
+            debugReq.textContent = JSON.stringify(data.debug.request, null, 2);
+            const resp = typeof data.debug.response === 'string' ? data.debug.response : JSON.stringify(data.debug.response, null, 2);
+            debugRes.textContent = resp;
+            debugContainer.classList.remove('hidden');
         } else {
-            debugEl.classList.add('hidden');
+            debugContainer.classList.add('hidden');
         }
     } catch (e) {
         resultEl.textContent = 'Request failed';
         showMessage('AI tagging failed', 'error');
-        debugEl.classList.add('hidden');
+        debugContainer.classList.add('hidden');
     } finally {
         btn.disabled = false;
         btn.classList.remove('opacity-50', 'cursor-not-allowed');
