--- a/frontend/budgets.html
+++ b/frontend/budgets.html
@@ -37,7 +37,15 @@
                 <button id="ai-run" type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded self-end"><i class="fas fa-robot inline w-4 h-4 mr-1"></i>Generate Budgets</button>
             </form>
             <div id="ai-result" class="mt-4"></div>
-            <pre id="ai-debug" class="mt-4 text-xs bg-gray-100 p-2 overflow-x-auto hidden"></pre>
+            <div id="ai-debug" class="mt-4 hidden">
+                <div class="bg-white p-4 rounded shadow border border-gray-400">
+                    <h3 class="font-semibold text-gray-700 mb-2">AI Debug</h3>
+                    <p class="text-sm font-semibold">Request</p>
+                    <pre id="ai-debug-request" class="text-xs bg-gray-100 p-2 mb-2 overflow-x-auto"></pre>
+                    <p class="text-sm font-semibold">Response</p>
+                    <pre id="ai-debug-response" class="text-xs bg-gray-100 p-2 overflow-x-auto"></pre>
+                </div>
+            </div>
 
         </section>
         <section>
@@ -158,7 +166,9 @@ document.getElementById('ai-form').addEventListener('submit',async e=>{
     const goal=document.getElementById('goal').value;
 
     const resultEl=document.getElementById('ai-result');
-    const debugEl=document.getElementById('ai-debug');
+    const debugContainer=document.getElementById('ai-debug');
+    const debugReq=document.getElementById('ai-debug-request');
+    const debugRes=document.getElementById('ai-debug-response');
     const btn=document.getElementById('ai-run');
     btn.disabled=true;
     btn.classList.add('opacity-50','cursor-not-allowed');
@@ -182,15 +192,17 @@ document.getElementById('ai-form').addEventListener('submit',async e=>{
             showMessage('AI budgeting failed','error');
         }
         if(data.debug){
-            debugEl.textContent=JSON.stringify(data.debug,null,2);
-            debugEl.classList.remove('hidden');
+            debugReq.textContent=JSON.stringify(data.debug.request,null,2);
+            const resp=typeof data.debug.response==='string'?data.debug.response:JSON.stringify(data.debug.response,null,2);
+            debugRes.textContent=resp;
+            debugContainer.classList.remove('hidden');
         }else{
-            debugEl.classList.add('hidden');
+            debugContainer.classList.add('hidden');
         }
     }catch(err){
         resultEl.textContent='Request failed';
         showMessage('AI budgeting failed','error');
-        debugEl.classList.add('hidden');
+        debugContainer.classList.add('hidden');
     }finally{
         btn.disabled=false;
         btn.classList.remove('opacity-50','cursor-not-allowed');
