--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -8,7 +8,7 @@
 </div>
 <div class="space-y-2">
   <div class="group">
-    <h3 class="text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Start Here</h3>
+    <h3 class="flex items-center justify-between text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Start Here <i class="fas fa-chevron-right transform transition-transform" aria-hidden="true"></i></h3>
     <ul class="space-y-1 overflow-hidden max-h-0 transition-all duration-300">
       <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="index.html"><i class="fas fa-home mr-1"></i> Home</a></li>
       <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="upload.html"><i class="fas fa-upload mr-1"></i> Upload OFX Files</a></li>
@@ -16,7 +16,7 @@
   </div>
 
   <div class="group">
-    <h3 class="text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Statements &amp; Transactions</h3>
+    <h3 class="flex items-center justify-between text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Statements &amp; Transactions <i class="fas fa-chevron-right transform transition-transform" aria-hidden="true"></i></h3>
     <ul class="space-y-1 overflow-hidden max-h-0 transition-all duration-300">
         <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="monthly_statement.html"><i class="fas fa-file-invoice mr-1"></i> Monthly Statement</a></li>
         <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="report.html"><i class="fas fa-file-lines mr-1"></i> Transaction Reports</a></li>
@@ -27,7 +27,7 @@
   </div>
 
   <div class="group">
-    <h3 class="text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Dashboards &amp; Graphs</h3>
+    <h3 class="flex items-center justify-between text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Dashboards &amp; Graphs <i class="fas fa-chevron-right transform transition-transform" aria-hidden="true"></i></h3>
     <ul class="space-y-1 overflow-hidden max-h-0 transition-all duration-300">
         <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="yearly_dashboard.html"><i class="fas fa-calendar mr-1"></i> Yearly Dashboard</a></li>
         <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="all_years_dashboard.html"><i class="fas fa-calendar-alt mr-1"></i> All Years Dashboard</a></li>
@@ -38,18 +38,19 @@
         <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="pivot.html"><i class="fas fa-table mr-1"></i> Pivot Analysis</a></li>
         <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="graphs.html"><i class="fas fa-chart-bar mr-1"></i> Graphs</a></li>
         <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="ai_feedback.html"><i class="fas fa-comments-dollar mr-1"></i> AI Feedback</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="climate_analysis.html"><i class="fas fa-cloud-sun mr-1"></i> Climate Analysis</a></li>
     </ul>
   </div>
 
   <div class="group">
-    <h3 class="text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Budgeting</h3>
+    <h3 class="flex items-center justify-between text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Budgeting <i class="fas fa-chevron-right transform transition-transform" aria-hidden="true"></i></h3>
     <ul class="space-y-1 overflow-hidden max-h-0 transition-all duration-300">
         <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="budgets.html"><i class="fas fa-piggy-bank mr-1"></i> Budgets</a></li>
     </ul>
   </div>
 
   <div class="group">
-    <h3 class="text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Projects</h3>
+    <h3 class="flex items-center justify-between text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Projects <i class="fas fa-chevron-right transform transition-transform" aria-hidden="true"></i></h3>
     <ul class="space-y-1 overflow-hidden max-h-0 transition-all duration-300">
         <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="project_add.html"><i class="fas fa-plus mr-1"></i> Add Project</a></li>
         <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="projects.html"><i class="fas fa-screwdriver-wrench mr-1"></i> View Projects</a></li>
@@ -59,7 +60,7 @@
   </div>
 
   <div class="group">
-    <h3 class="text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Organise Data</h3>
+    <h3 class="flex items-center justify-between text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Organise Data <i class="fas fa-chevron-right transform transition-transform" aria-hidden="true"></i></h3>
     <ul class="space-y-1 overflow-hidden max-h-0 transition-all duration-300">
         <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="tags.html"><i class="fas fa-tags mr-1"></i> Manage Tags</a></li>
         <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="ai_tags.html"><i class="fas fa-robot mr-1"></i> AI Tags</a></li>
@@ -77,14 +78,14 @@
   </div>
 
   <div class="group">
-    <h3 class="text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Export</h3>
+    <h3 class="flex items-center justify-between text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Export <i class="fas fa-chevron-right transform transition-transform" aria-hidden="true"></i></h3>
     <ul class="space-y-1 overflow-hidden max-h-0 transition-all duration-300">
       <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="export.html"><i class="fas fa-file-export mr-1"></i> Export Data</a></li>
     </ul>
   </div>
 
   <div class="group">
-    <h3 class="text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Admin Tools</h3>
+    <h3 class="flex items-center justify-between text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Admin Tools <i class="fas fa-chevron-right transform transition-transform" aria-hidden="true"></i></h3>
     <ul class="space-y-1 overflow-hidden max-h-0 transition-all duration-300">
         <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="processes.html"><i class="fas fa-gears mr-1"></i> Run Processes</a></li>
         <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="logs.html"><i class="fas fa-scroll mr-1"></i> View Logs</a></li>
