--- a/frontend/ai_feedback.html
+++ b/frontend/ai_feedback.html
@@ -24,7 +24,7 @@
             <div id="debug" class="mt-4 hidden">
                 <div class="bg-white p-4 rounded shadow border border-gray-400">
                     <h3 class="font-semibold text-gray-700 mb-2">AI Debug</h3>
-                    <p class="text-sm font-semibold">Request</p>
+                    <p class="text-sm font-semibold">Prompt</p>
                     <pre id="debug-request" class="text-xs bg-gray-100 p-2 mb-2 overflow-x-auto"></pre>
                     <p class="text-sm font-semibold">Response</p>
                     <pre id="debug-response" class="text-xs bg-gray-100 p-2 overflow-x-auto"></pre>
@@ -57,7 +57,7 @@ document.getElementById('run').addEventListener('click', async () => {
             showMessage('AI feedback ready');
         }
         if (data.debug) {
-            debugReq.textContent = JSON.stringify(data.debug.request, null, 2);
+            debugReq.textContent = data.debug.prompt;
             const resp = typeof data.debug.response === 'string' ? data.debug.response : JSON.stringify(data.debug.response, null, 2);
             debugRes.textContent = resp;
             debugContainer.classList.remove('hidden');
@@ -73,6 +73,18 @@ document.getElementById('run').addEventListener('click', async () => {
         btn.classList.remove('opacity-50', 'cursor-not-allowed');
     }
 });
+
+async function initDebug(){
+    try{
+        const res=await fetch('../php_backend/public/ai_debug.php');
+        const data=await res.json();
+        if(data.debug){
+            document.getElementById('debug').classList.remove('hidden');
+        }
+    }catch(e){}
+}
+
+initDebug();
 </script>
 <script src="js/page_help.js"></script>
 </body>
